fixed responsive layout issue at 480px

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ img, object {
 
 
 /* Smaller Resolution ----------- */
-@media screen and (max-width : 650px) {
+@media screen and (max-width: 480px) {
   .grid_1,
   .grid_2,
   .grid_3,
@@ -155,40 +155,31 @@ img, object {
   .grid_12 {
     width:100%;
   }
-  #logo img {
-    max-width: 100%;
-  }
-  #nav ul {
-    margin: 5% 0;
-  }
-
-  #nav ul li a {
-    -webkit-user-select: none;
-    font-size: 0.750em;
+  #logo {
+    width: 40%;
+    margin: 0%;
+    padding: 0%;
   }
 
-  #nav ul li {
+  .grid_12 {
+    margin: 0%;
+    padding: 0%;
+  }
+
+  .nav {
+    width: 100%;
     float: left;
-    margin: 5% 0;
-    }
-  #nav ul  li.about {
-    width: 20%;
-    text-align: left;
-  }
-  #nav ul  li.pricing {
-    width: 55%;
+    margin: 0%;
+    padding: 0%;
     text-align: center;
   }
-  #nav ul  li.locations {
-    width: 25%;
-    text-align: right;
-  }
-  #nav ul  li.contact {
+
+  ul.nav li {
     width: 100%;
-    margin: 0;
-    font-size: 1em;
+    margin: 0%;
   }
-  #intro, #about {
+
+  #intro {
     display: none;
   }
   #featured-cupcake, #new-cupcakes {
